--- a/index.html
+++ b/index.html
@@ -142,6 +142,29 @@
       </div>
 
       <div class="grid grid-cols-1 sm:grid-cols-3 gap-6 p-2 sm:p-8 max-w-6xl mx-auto">
+
+        <div class="rounded-lg overflow-hidden border border-[#8f5a8a] hover:outline hover:outline-[#8f5a8a] shadow-lg  transform transition duration-500 hover:scale-105">
+  <a href="https://apps.apple.com/us/app/math-multiplication-flash-game/id6451313735">
+    <div class="grid grid-row-2 h-full">
+      <div class="">
+        <div class="aspect-[16/9] border-b border-b-[#8f5a8a] items-center" style="background-color: #171725; color: white" }>
+          <div class="">
+            <img src="/logo/mathgame.webp" alt="PromptMonthly">
+          </div>
+        </div>
+      </div>
+
+      <div class="text-xl h-56 p-4 grid gird-cols-3 bg-[#fff4f2] space-y-2">
+        <h2 class="text-xl font-semibold tracking-normal">Find the solution </h2>
+        <div class="font-light text-lg pt-2 ">You are given the color name. The closer your guess is to the actual color, the more points you collect.</div>
+        <div class="w-full font-medium tracking-wide flex items-end">
+          <a href="https://apps.apple.com/us/app/math-multiplication-flash-game/id6451313735" class="hover:underline-animate text-lg">Math Multiplication Flash Game</a>
+        </div>
+      </div>
+    </div>
+  </a>
+</div>
+
         <div class="rounded-lg overflow-hidden border border-[#8f5a8a] hover:outline hover:outline-[#8f5a8a] shadow-lg  transform transition duration-500 hover:scale-105">
   <a href="https://colorguesser.com/">
     <div class="grid grid-row-2 h-full">
