--- a/til/entries/2017-03-07-binding/index.html
+++ b/til/entries/2017-03-07-binding/index.html
@@ -101,16 +101,16 @@
       <div class="max-w-2xl mx-auto py-8 px-4 astro-TFOVXDCZ">
         <h2 class="text-lg pb-1 uppercase font-base astro-TFOVXDCZ">Other Lessons</h2>
         <article class="astro-TFOVXDCZ">
-          <a href="/til/entries/2017-03-28-sqllite" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
-            <span class="astro-TFOVXDCZ">SQLite Type Affinity</span>
+          <a href="/til/entries/2020-06-28-multiselect" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
+            <span class="astro-TFOVXDCZ">Empty multiselect is not set</span>
           </a>
         </article><article class="astro-TFOVXDCZ">
-          <a href="/til/entries/2017-03-30-bash-shortcuts" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
-            <span class="astro-TFOVXDCZ">BASH Shortcuts I was not not aware of</span>
+          <a href="/til/entries/2023-04-13-how-to-shallow-clone-git" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
+            <span class="astro-TFOVXDCZ">How to Shallow Clone With Git</span>
           </a>
         </article><article class="astro-TFOVXDCZ">
-          <a href="/til/entries/2019-10-22-fswatch" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
-            <span class="astro-TFOVXDCZ">Execute python file on change fswatch</span>
+          <a href="/til/entries/2023-05-20-eigengrau" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
+            <span class="astro-TFOVXDCZ">The darkest color you can perceive without contrast is called Eigengrau</span>
           </a>
         </article>
       </div>
