--- a/til/entries/2017-03-30-bash-shortcuts/index.html
+++ b/til/entries/2017-03-30-bash-shortcuts/index.html
@@ -115,16 +115,16 @@
       <div class="max-w-2xl mx-auto py-8 px-4 astro-TFOVXDCZ">
         <h2 class="text-lg pb-1 uppercase font-base astro-TFOVXDCZ">Other Lessons</h2>
         <article class="astro-TFOVXDCZ">
-          <a href="/til/entries/2021-05-25-tagged_templates" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
-            <span class="astro-TFOVXDCZ">Tagged Templates in JavaScript</span>
-          </a>
-        </article><article class="astro-TFOVXDCZ">
           <a href="/til/entries/2017-03-28-sqllite" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
             <span class="astro-TFOVXDCZ">SQLite Type Affinity</span>
           </a>
         </article><article class="astro-TFOVXDCZ">
-          <a href="/til/entries/draft/bla" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
-            <span class="astro-TFOVXDCZ">digrc</span>
+          <a href="/til/entries/2018-10-22-bash" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
+            <span class="astro-TFOVXDCZ">.bash_profile vs .bashrc</span>
+          </a>
+        </article><article class="astro-TFOVXDCZ">
+          <a href="/til/entries/2017-03-07-binding" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
+            <span class="astro-TFOVXDCZ">What is the difference between 127.0.0.1 and 0.0.0.0?</span>
           </a>
         </article>
       </div>
