--- a/til/entries/2019-12-06-java-comment-code/index.html
+++ b/til/entries/2019-12-06-java-comment-code/index.html
@@ -105,16 +105,16 @@
       <div class="max-w-2xl mx-auto py-8 px-4 astro-TFOVXDCZ">
         <h2 class="text-lg pb-1 uppercase font-base astro-TFOVXDCZ">Other Lessons</h2>
         <article class="astro-TFOVXDCZ">
+          <a href="/til/entries/2020-06-28-multiselect" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
+            <span class="astro-TFOVXDCZ">Empty multiselect is not set</span>
+          </a>
+        </article><article class="astro-TFOVXDCZ">
           <a href="/til/entries/2017-03-13-java-and-oracle" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
             <span class="astro-TFOVXDCZ">Java Enum and extract in SQL</span>
           </a>
         </article><article class="astro-TFOVXDCZ">
-          <a href="/til/entries/2018-10-22-bash" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
-            <span class="astro-TFOVXDCZ">.bash_profile vs .bashrc</span>
-          </a>
-        </article><article class="astro-TFOVXDCZ">
-          <a href="/til/entries/2019-05-17-pipe-linux" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
-            <span class="astro-TFOVXDCZ">Shortcut for linux pipe</span>
+          <a href="/til/entries/2019-11-05-simulate network control" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
+            <span class="astro-TFOVXDCZ">Simulate network control</span>
           </a>
         </article>
       </div>
