--- a/til/entries/2021-05-25-tagged_templates/index.html
+++ b/til/entries/2021-05-25-tagged_templates/index.html
@@ -97,16 +97,16 @@
       <div class="max-w-2xl mx-auto py-8 px-4 astro-TFOVXDCZ">
         <h2 class="text-lg pb-1 uppercase font-base astro-TFOVXDCZ">Other Lessons</h2>
         <article class="astro-TFOVXDCZ">
-          <a href="/til/entries/2020-06-28-multiselect" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
-            <span class="astro-TFOVXDCZ">Empty multiselect is not set</span>
-          </a>
-        </article><article class="astro-TFOVXDCZ">
           <a href="/til/entries/2023-05-20-eigengrau" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
             <span class="astro-TFOVXDCZ">The darkest color you can perceive without contrast is called Eigengrau</span>
           </a>
         </article><article class="astro-TFOVXDCZ">
-          <a href="/til/entries/draft/bla" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
-            <span class="astro-TFOVXDCZ">digrc</span>
+          <a href="/til/entries/2023-06-05-shortcut-to-forward-standard-output-and-error-to-another-command" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
+            <span class="astro-TFOVXDCZ">Shortcut to forward standard output and error to another command</span>
+          </a>
+        </article><article class="astro-TFOVXDCZ">
+          <a href="/til/entries/2019-10-22-fswatch" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
+            <span class="astro-TFOVXDCZ">Execute python file on change fswatch</span>
           </a>
         </article>
       </div>
