--- a/til/entries/2023-05-20-eigengrau/index.html
+++ b/til/entries/2023-05-20-eigengrau/index.html
@@ -91,16 +91,16 @@
       <div class="max-w-2xl mx-auto py-8 px-4 astro-TFOVXDCZ">
         <h2 class="text-lg pb-1 uppercase font-base astro-TFOVXDCZ">Other Lessons</h2>
         <article class="astro-TFOVXDCZ">
-          <a href="/til/entries/2019-11-05-simulate network control" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
-            <span class="astro-TFOVXDCZ">Simulate network control</span>
-          </a>
-        </article><article class="astro-TFOVXDCZ">
-          <a href="/til/entries/2023-05-20-eigengrau" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
-            <span class="astro-TFOVXDCZ">The darkest color you can perceive without contrast is called Eigengrau</span>
-          </a>
-        </article><article class="astro-TFOVXDCZ">
           <a href="/til/entries/draft/bla" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
             <span class="astro-TFOVXDCZ">digrc</span>
+          </a>
+        </article><article class="astro-TFOVXDCZ">
+          <a href="/til/entries/2017-03-14-du" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
+            <span class="astro-TFOVXDCZ">What is the difference between `du` and `df` command?</span>
+          </a>
+        </article><article class="astro-TFOVXDCZ">
+          <a href="/til/entries/2017-03-27-case" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
+            <span class="astro-TFOVXDCZ">Various</span>
           </a>
         </article>
       </div>
