--- a/til/entries/2019-05-17-pipe-linux/index.html
+++ b/til/entries/2019-05-17-pipe-linux/index.html
@@ -92,16 +92,16 @@
       <div class="max-w-2xl mx-auto py-8 px-4 astro-TFOVXDCZ">
         <h2 class="text-lg pb-1 uppercase font-base astro-TFOVXDCZ">Other Lessons</h2>
         <article class="astro-TFOVXDCZ">
-          <a href="/til/entries/2019-05-17-pipe-linux" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
-            <span class="astro-TFOVXDCZ">Shortcut for linux pipe</span>
+          <a href="/til/entries/2019-10-22-fswatch" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
+            <span class="astro-TFOVXDCZ">Execute python file on change fswatch</span>
           </a>
         </article><article class="astro-TFOVXDCZ">
-          <a href="/til/entries/2023-06-05-shortcut-to-forward-standard-output-and-error-to-another-command" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
-            <span class="astro-TFOVXDCZ">Shortcut to forward standard output and error to another command</span>
+          <a href="/til/entries/2019-12-07-new-javascript-features" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
+            <span class="astro-TFOVXDCZ">JavaScript Function string</span>
           </a>
         </article><article class="astro-TFOVXDCZ">
-          <a href="/til/entries/2017-03-27-case" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
-            <span class="astro-TFOVXDCZ">Various</span>
+          <a href="/til/entries/2021-05-25-tagged_templates" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
+            <span class="astro-TFOVXDCZ">Tagged Templates in JavaScript</span>
           </a>
         </article>
       </div>
