--- a/til/entries/2023-04-13-how-to-shallow-clone-git/index.html
+++ b/til/entries/2023-04-13-how-to-shallow-clone-git/index.html
@@ -95,12 +95,12 @@ Sometimes you only want to check the latest states. With shallow clone you tell 
             <span class="astro-TFOVXDCZ">Waiting for process</span>
           </a>
         </article><article class="astro-TFOVXDCZ">
-          <a href="/til/entries/2017-03-29-uri" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
-            <span class="astro-TFOVXDCZ">Is URI case sensitive?</span>
+          <a href="/til/entries/draft/bla" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
+            <span class="astro-TFOVXDCZ">digrc</span>
           </a>
         </article><article class="astro-TFOVXDCZ">
-          <a href="/til/entries/2019-10-22-fswatch" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
-            <span class="astro-TFOVXDCZ">Execute python file on change fswatch</span>
+          <a href="/til/entries/2019-05-17-pipe-linux" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
+            <span class="astro-TFOVXDCZ">Shortcut for linux pipe</span>
           </a>
         </article>
       </div>
