--- a/til/entries/draft/bla/index.html
+++ b/til/entries/draft/bla/index.html
@@ -90,16 +90,16 @@ TwitteR:</p>
       <div class="max-w-2xl mx-auto py-8 px-4 astro-TFOVXDCZ">
         <h2 class="text-lg pb-1 uppercase font-base astro-TFOVXDCZ">Other Lessons</h2>
         <article class="astro-TFOVXDCZ">
-          <a href="/til/entries/draft/bla" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
-            <span class="astro-TFOVXDCZ">digrc</span>
+          <a href="/til/entries/2023-05-20-eigengrau" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
+            <span class="astro-TFOVXDCZ">The darkest color you can perceive without contrast is called Eigengrau</span>
           </a>
         </article><article class="astro-TFOVXDCZ">
-          <a href="/til/entries/2023-06-05-shortcut-to-forward-standard-output-and-error-to-another-command" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
-            <span class="astro-TFOVXDCZ">Shortcut to forward standard output and error to another command</span>
+          <a href="/til/entries/2017-03-28-sqllite" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
+            <span class="astro-TFOVXDCZ">SQLite Type Affinity</span>
           </a>
         </article><article class="astro-TFOVXDCZ">
-          <a href="/til/entries/2021-05-25-tagged_templates" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
-            <span class="astro-TFOVXDCZ">Tagged Templates in JavaScript</span>
+          <a href="/til/entries/2017-03-13-java-and-oracle" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
+            <span class="astro-TFOVXDCZ">Java Enum and extract in SQL</span>
           </a>
         </article>
       </div>
