--- a/til/entries/2019-05-17-pipe-linux/index.html
+++ b/til/entries/2019-05-17-pipe-linux/index.html
@@ -31,7 +31,7 @@
 
 
 
-<link rel="stylesheet" href="/assets/6bb2e165.162bd80b.css" />
+<link rel="stylesheet" href="/assets/6bb2e165.7c8bbfa5.css" />
 <link rel="stylesheet" href="/assets/c983c6bf.a45b011b.css" />
 <link rel="stylesheet" href="/assets/768b5d4d.96df3516.css" /></head>
 
@@ -75,10 +75,13 @@
   <!--</div>-->
   <div style="background-color: white; " class="overflow-hidden">
     <svg id="visual" viewBox="0 0 1440 50" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" style="scale: 101%">
+      <style type="text/css">
+          .st1{filter: drop-shadow(12px 4px 4px rgb(0 0 0 / 0.3)); }
+      </style>
       <rect x="0" y="0" width="1440" height="50" fill="#5a9dbe"></rect>
       <!--<path d="M0 51L58 100L115 108L173 108L230 67L288 102L346 44L403 103L461 81L518 44L576 127L634 128L691 119L749 81L806 103L864 100L922 140L979 119L1037 62L1094 52L1152 62L1210 73L1267 140L1325 107L1382 93L1440 47L1440 151L1382 151L1325 151L1267 151L1210 151L1152 151L1094 151L1037 151L979 151L922 151L864 151L806 151L749 151L691 151L634 151L576 151L518 151L461 151L403 151L346 151L288 151L230 151L173 151L115 151L58 151L0 151Z" fill="#fff" stroke-linecap="square" stroke-linejoin="bevel"></path>-->
       <!--<path xmlns="http://www.w3.org/2000/svg" d="M0 98L9.7 93.5C19.3 89 38.7 80 57.8 80C77 80 96 89 115.2 88.3C134.3 87.7 153.7 77.3 172.8 85.7C192 94 211 121 230.2 129.3C249.3 137.7 268.7 127.3 288 118.5C307.3 109.7 326.7 102.3 345.8 107.5C365 112.7 384 130.3 403.2 129C422.3 127.7 441.7 107.3 460.8 97.7C480 88 499 89 518.2 95.5C537.3 102 556.7 114 576 109.5C595.3 105 614.7 84 633.8 79.2C653 74.3 672 85.7 691.2 99.8C710.3 114 729.7 131 748.8 136.5C768 142 787 136 806.2 130.5C825.3 125 844.7 120 864 118.7C883.3 117.3 902.7 119.7 921.8 116.2C941 112.7 960 103.3 979.2 104.2C998.3 105 1017.7 116 1036.8 122C1056 128 1075 129 1094.2 126.2C1113.3 123.3 1132.7 116.7 1152 114.8C1171.3 113 1190.7 116 1209.8 111.3C1229 106.7 1248 94.3 1267.2 83.3C1286.3 72.3 1305.7 62.7 1324.8 60.8C1344 59 1363 65 1382.2 66C1401.3 67 1420.7 63 1430.3 61L1440 59L1440 151L1430.3 151C1420.7 151 1401.3 151 1382.2 151C1363 151 1344 151 1324.8 151C1305.7 151 1286.3 151 1267.2 151C1248 151 1229 151 1209.8 151C1190.7 151 1171.3 151 1152 151C1132.7 151 1113.3 151 1094.2 151C1075 151 1056 151 1036.8 151C1017.7 151 998.3 151 979.2 151C960 151 941 151 921.8 151C902.7 151 883.3 151 864 151C844.7 151 825.3 151 806.2 151C787 151 768 151 748.8 151C729.7 151 710.3 151 691.2 151C672 151 653 151 633.8 151C614.7 151 595.3 151 576 151C556.7 151 537.3 151 518.2 151C499 151 480 151 460.8 151C441.7 151 422.3 151 403.2 151C384 151 365 151 345.8 151C326.7 151 307.3 151 288 151C268.7 151 249.3 151 230.2 151C211 151 192 151 172.8 151C153.7 151 134.3 151 115.2 151C96 151 77 151 57.8 151C38.7 151 19.3 151 9.7 151L0 151Z" fill="#fff" stroke-linecap="round" stroke-linejoin="miter"/>-->
-      <path xmlns="http://www.w3.org/2000/svg" d="M0 36L9.7 36.2C19.3 36.3 38.7 36.7 57.8 35.5C77 34.3 96 31.7 115.2 31.5C134.3 31.3 153.7 33.7 172.8 32.7C192 31.7 211 27.3 230.2 27.2C249.3 27 268.7 31 288 30.2C307.3 29.3 326.7 23.7 345.8 22.2C365 20.7 384 23.3 403.2 25.5C422.3 27.7 441.7 29.3 460.8 30.8C480 32.3 499 33.7 518.2 32.2C537.3 30.7 556.7 26.3 576 25.5C595.3 24.7 614.7 27.3 633.8 31.3C653 35.3 672 40.7 691.2 38.2C710.3 35.7 729.7 25.3 748.8 20C768 14.7 787 14.3 806.2 19.5C825.3 24.7 844.7 35.3 864 35.7C883.3 36 902.7 26 921.8 23.2C941 20.3 960 24.7 979.2 29.5C998.3 34.3 1017.7 39.7 1036.8 41.7C1056 43.7 1075 42.3 1094.2 42C1113.3 41.7 1132.7 42.3 1152 39.3C1171.3 36.3 1190.7 29.7 1209.8 28.5C1229 27.3 1248 31.7 1267.2 31.5C1286.3 31.3 1305.7 26.7 1324.8 26.5C1344 26.3 1363 30.7 1382.2 30.2C1401.3 29.7 1420.7 24.3 1430.3 21.7L1440 19L1440 51L1430.3 51C1420.7 51 1401.3 51 1382.2 51C1363 51 1344 51 1324.8 51C1305.7 51 1286.3 51 1267.2 51C1248 51 1229 51 1209.8 51C1190.7 51 1171.3 51 1152 51C1132.7 51 1113.3 51 1094.2 51C1075 51 1056 51 1036.8 51C1017.7 51 998.3 51 979.2 51C960 51 941 51 921.8 51C902.7 51 883.3 51 864 51C844.7 51 825.3 51 806.2 51C787 51 768 51 748.8 51C729.7 51 710.3 51 691.2 51C672 51 653 51 633.8 51C614.7 51 595.3 51 576 51C556.7 51 537.3 51 518.2 51C499 51 480 51 460.8 51C441.7 51 422.3 51 403.2 51C384 51 365 51 345.8 51C326.7 51 307.3 51 288 51C268.7 51 249.3 51 230.2 51C211 51 192 51 172.8 51C153.7 51 134.3 51 115.2 51C96 51 77 51 57.8 51C38.7 51 19.3 51 9.7 51L0 51Z" fill="#fff" stroke-linecap="round" stroke-linejoin="miter"></path>
+      <path class="st1" xmlns="http://www.w3.org/2000/svg" d="M0 36L9.7 36.2C19.3 36.3 38.7 36.7 57.8 35.5C77 34.3 96 31.7 115.2 31.5C134.3 31.3 153.7 33.7 172.8 32.7C192 31.7 211 27.3 230.2 27.2C249.3 27 268.7 31 288 30.2C307.3 29.3 326.7 23.7 345.8 22.2C365 20.7 384 23.3 403.2 25.5C422.3 27.7 441.7 29.3 460.8 30.8C480 32.3 499 33.7 518.2 32.2C537.3 30.7 556.7 26.3 576 25.5C595.3 24.7 614.7 27.3 633.8 31.3C653 35.3 672 40.7 691.2 38.2C710.3 35.7 729.7 25.3 748.8 20C768 14.7 787 14.3 806.2 19.5C825.3 24.7 844.7 35.3 864 35.7C883.3 36 902.7 26 921.8 23.2C941 20.3 960 24.7 979.2 29.5C998.3 34.3 1017.7 39.7 1036.8 41.7C1056 43.7 1075 42.3 1094.2 42C1113.3 41.7 1132.7 42.3 1152 39.3C1171.3 36.3 1190.7 29.7 1209.8 28.5C1229 27.3 1248 31.7 1267.2 31.5C1286.3 31.3 1305.7 26.7 1324.8 26.5C1344 26.3 1363 30.7 1382.2 30.2C1401.3 29.7 1420.7 24.3 1430.3 21.7L1440 19L1440 51L1430.3 51C1420.7 51 1401.3 51 1382.2 51C1363 51 1344 51 1324.8 51C1305.7 51 1286.3 51 1267.2 51C1248 51 1229 51 1209.8 51C1190.7 51 1171.3 51 1152 51C1132.7 51 1113.3 51 1094.2 51C1075 51 1056 51 1036.8 51C1017.7 51 998.3 51 979.2 51C960 51 941 51 921.8 51C902.7 51 883.3 51 864 51C844.7 51 825.3 51 806.2 51C787 51 768 51 748.8 51C729.7 51 710.3 51 691.2 51C672 51 653 51 633.8 51C614.7 51 595.3 51 576 51C556.7 51 537.3 51 518.2 51C499 51 480 51 460.8 51C441.7 51 422.3 51 403.2 51C384 51 365 51 345.8 51C326.7 51 307.3 51 288 51C268.7 51 249.3 51 230.2 51C211 51 192 51 172.8 51C153.7 51 134.3 51 115.2 51C96 51 77 51 57.8 51C38.7 51 19.3 51 9.7 51L0 51Z" fill="#fff" stroke-linecap="round" stroke-linejoin="miter"></path>
     </svg>
   </div>
 
@@ -109,16 +112,16 @@
       <div class="max-w-2xl mx-auto py-8 px-4 astro-TFOVXDCZ">
         <h2 class="text-lg pb-1 uppercase font-base astro-TFOVXDCZ">Other Lessons</h2>
         <article class="astro-TFOVXDCZ">
-          <a href="/til/entries/2017-03-27-case" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
-            <span class="astro-TFOVXDCZ">Various</span>
+          <a href="/til/entries/2017-03-28-sqllite" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
+            <span class="astro-TFOVXDCZ">SQLite Type Affinity</span>
           </a>
         </article><article class="astro-TFOVXDCZ">
-          <a href="/til/entries/2019-05-17-pipe-linux" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
-            <span class="astro-TFOVXDCZ">Shortcut for linux pipe</span>
+          <a href="/til/entries/2023-06-05-shortcut-to-forward-standard-output-and-error-to-another-command" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
+            <span class="astro-TFOVXDCZ">Shortcut to forward standard output and error to another command</span>
           </a>
         </article><article class="astro-TFOVXDCZ">
-          <a href="/til/entries/2021-05-25-tagged_templates" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
-            <span class="astro-TFOVXDCZ">Tagged Templates in JavaScript</span>
+          <a href="/til/entries/2019-12-06-java-comment-code" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
+            <span class="astro-TFOVXDCZ">Java code comments</span>
           </a>
         </article>
       </div>
@@ -126,42 +129,42 @@
   </div>
   </div>
 
-  <footer class="border-t ">
+  <footer class="bg-primary-50 ">
   <div class="py-4 sm:py-8">
     <div class="flex justify-center gap-6">
       <a href="https://twitter.com/kiru_io" class="text-gray-400 hover:text-gray-500">
         <span class="sr-only">Twitter</span>
-        <svg class="h-6 w-6" fill="#8f5a8a" viewBox="0 0 24 24" aria-hidden="true">
+        <svg class="h-6 w-6" fill="#5a9dbe" viewBox="0 0 24 24" aria-hidden="true">
           <path d="M8.29 20.251c7.547 0 11.675-6.253 11.675-11.675 0-.178 0-.355-.012-.53A8.348 8.348 0 0022 5.92a8.19 8.19 0 01-2.357.646 4.118 4.118 0 001.804-2.27 8.224 8.224 0 01-2.605.996 4.107 4.107 0 00-6.993 3.743 11.65 11.65 0 01-8.457-4.287 4.106 4.106 0 001.27 5.477A4.072 4.072 0 012.8 9.713v.052a4.105 4.105 0 003.292 4.022 4.095 4.095 0 01-1.853.07 4.108 4.108 0 003.834 2.85A8.233 8.233 0 012 18.407a11.616 11.616 0 006.29 1.84"></path>
         </svg>
       </a>
 
       <a href="https://github.com/kiru" class="text-gray-400 hover:text-gray-500">
         <span class="sr-only">GitHub</span>
-        <svg class="h-6 w-6" fill="#8f5a8a" viewBox="0 0 24 24" aria-hidden="true">
+        <svg class="h-6 w-6" fill="#5a9dbe" viewBox="0 0 24 24" aria-hidden="true">
           <path fill-rule="evenodd" d="M12 2C6.477 2 2 6.484 2 12.017c0 4.425 2.865 8.18 6.839 9.504.5.092.682-.217.682-.483 0-.237-.008-.868-.013-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.029-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0112 6.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.379.202 2.398.1 2.651.64.7 1.028 1.595 1.028 2.688 0 3.848-2.339 4.695-4.566 4.943.359.309.678.92.678 1.855 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.019 10.019 0 0022 12.017C22 6.484 17.522 2 12 2z" clip-rule="evenodd"></path>
         </svg>
       </a>
 
       <a href="https://www.linkedin.com/in/kirusanth-poopalasingam-0685bb1a1/" class="text-gray-400 hover:text-gray-500">
         <span class="sr-only">Mail</span>
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 50 50" stroke-width="1.5" stroke="#8f5a8a" class="w-6 h-6">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 50 50" stroke-width="1.5" stroke="#5a9dbe" class="w-6 h-6">
           <path stroke-linecap="round" stroke-linejoin="round" d="M41,4H9C6.24,4,4,6.24,4,9v32c0,2.76,2.24,5,5,5h32c2.76,0,5-2.24,5-5V9C46,6.24,43.76,4,41,4z M17,20v19h-6V20H17z M11,14.47c0-1.4,1.2-2.47,3-2.47s2.93,1.07,3,2.47c0,1.4-1.12,2.53-3,2.53C12.2,17,11,15.87,11,14.47z M39,39h-6c0,0,0-9.26,0-10 c0-2-1-4-3.5-4.04h-0.08C27,24.96,26,27.02,26,29c0,0.91,0,10,0,10h-6V20h6v2.56c0,0,1.93-2.56,5.81-2.56 c3.97,0,7.19,2.73,7.19,8.26V39z"></path>
         </svg>
       </a>
 
       <a href="mailto:contact@kiru.io?subject=Found%20you%20via%20Kiru.io" class="text-gray-400 hover:text-gray-500">
         <span class="sr-only">Mail</span>
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="#8f5a8a" class="w-6 h-6">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="#5a9dbe" class="w-6 h-6">
           <path stroke-linecap="round" stroke-linejoin="round" d="M21.75 6.75v10.5a2.25 2.25 0 01-2.25 2.25h-15a2.25 2.25 0 01-2.25-2.25V6.75m19.5 0A2.25 2.25 0 0019.5 4.5h-15a2.25 2.25 0 00-2.25 2.25m19.5 0v.243a2.25 2.25 0 01-1.07 1.916l-7.5 4.615a2.25 2.25 0 01-2.36 0L3.32 8.91a2.25 2.25 0 01-1.07-1.916V6.75"></path>
         </svg>
       </a>
 
       <a href="https://kiruio.substack.com/" class="cursor-pointer text-gray-400">
         <svg xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0 0 1000 1000" class="h-6 w-6">
-          <rect fill="#8f5a8a" x="236.45" y="213.00" width="527.58" height="71.00" rx="0.33"></rect>
-          <rect fill="#8f5a8a" x="236.48" y="348.49" width="527.54" height="70.76" rx="0.26"></rect>
-          <path fill="#8f5a8a" d="   M 500.61 666.53   A 0.51 0.49 -46.2 0 0 500.15 666.55   L 236.98 813.63   A 0.34 0.34 75.9 0 1 236.48 813.33   Q 236.52 651.80 236.49 490.91   C 236.49 489.34 236.21 486.49 236.49 484.25   A 0.57 0.57 3.4 0 1 237.06 483.75   L 763.76 483.75   A 0.49 0.49 0.0 0 1 764.25 484.24   L 764.25 813.47   A 0.33 0.32 -75.6 0 1 763.77 813.76   Q 632.91 740.65 502.07 667.53   C 501.58 667.26 501.21 666.80 500.61 666.53   Z"></path>
+          <rect fill="#5a9dbe" x="236.45" y="213.00" width="527.58" height="71.00" rx="0.33"></rect>
+          <rect fill="#5a9dbe" x="236.48" y="348.49" width="527.54" height="70.76" rx="0.26"></rect>
+          <path fill="#5a9dbe" d="   M 500.61 666.53   A 0.51 0.49 -46.2 0 0 500.15 666.55   L 236.98 813.63   A 0.34 0.34 75.9 0 1 236.48 813.33   Q 236.52 651.80 236.49 490.91   C 236.49 489.34 236.21 486.49 236.49 484.25   A 0.57 0.57 3.4 0 1 237.06 483.75   L 763.76 483.75   A 0.49 0.49 0.0 0 1 764.25 484.24   L 764.25 813.47   A 0.33 0.32 -75.6 0 1 763.77 813.76   Q 632.91 740.65 502.07 667.53   C 501.58 667.26 501.21 666.80 500.61 666.53   Z"></path>
         </svg>
       </a>
     </div>
