--- a/til/entries/2019-12-06-java-comment-code/index.html
+++ b/til/entries/2019-12-06-java-comment-code/index.html
@@ -31,7 +31,7 @@
 
 
 
-<link rel="stylesheet" href="/assets/6bb2e165.7c8bbfa5.css" />
+<link rel="stylesheet" href="/assets/6bb2e165.18aaa459.css" />
 <link rel="stylesheet" href="/assets/c983c6bf.a45b011b.css" />
 <link rel="stylesheet" href="/assets/768b5d4d.96df3516.css" /></head>
 
@@ -76,7 +76,7 @@
   <div style="background-color: white; " class="overflow-hidden">
     <svg id="visual" viewBox="0 0 1440 50" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" style="scale: 101%">
       <style type="text/css">
-          .st1{filter: drop-shadow(12px 4px 4px rgb(0 0 0 / 0.3)); }
+          .st1{filter: drop-shadow(12px 4px 4px #397da1); }
       </style>
       <rect x="0" y="0" width="1440" height="50" fill="#5a9dbe"></rect>
       <!--<path d="M0 51L58 100L115 108L173 108L230 67L288 102L346 44L403 103L461 81L518 44L576 127L634 128L691 119L749 81L806 103L864 100L922 140L979 119L1037 62L1094 52L1152 62L1210 73L1267 140L1325 107L1382 93L1440 47L1440 151L1382 151L1325 151L1267 151L1210 151L1152 151L1094 151L1037 151L979 151L922 151L864 151L806 151L749 151L691 151L634 151L576 151L518 151L461 151L403 151L346 151L288 151L230 151L173 151L115 151L58 151L0 151Z" fill="#fff" stroke-linecap="square" stroke-linejoin="bevel"></path>-->
@@ -125,16 +125,16 @@
       <div class="max-w-2xl mx-auto py-8 px-4 astro-TFOVXDCZ">
         <h2 class="text-lg pb-1 uppercase font-base astro-TFOVXDCZ">Other Lessons</h2>
         <article class="astro-TFOVXDCZ">
-          <a href="/til/entries/2017-03-30-bash-shortcuts" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
-            <span class="astro-TFOVXDCZ">BASH Shortcuts I was not not aware of</span>
+          <a href="/til/entries/2019-12-04-pid" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
+            <span class="astro-TFOVXDCZ">Waiting for process</span>
           </a>
         </article><article class="astro-TFOVXDCZ">
-          <a href="/til/entries/2021-05-25-tagged_templates" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
-            <span class="astro-TFOVXDCZ">Tagged Templates in JavaScript</span>
+          <a href="/til/entries/2019-10-22-fswatch" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
+            <span class="astro-TFOVXDCZ">Execute python file on change fswatch</span>
           </a>
         </article><article class="astro-TFOVXDCZ">
-          <a href="/til/entries/2023-05-20-eigengrau" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
-            <span class="astro-TFOVXDCZ">The darkest color you can perceive without contrast is called Eigengrau</span>
+          <a href="/til/entries/2017-03-13-java-and-oracle" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
+            <span class="astro-TFOVXDCZ">Java Enum and extract in SQL</span>
           </a>
         </article>
       </div>
