--- a/til/entries/2017-03-30-bash-shortcuts/index.html
+++ b/til/entries/2017-03-30-bash-shortcuts/index.html
@@ -31,7 +31,7 @@
 
 
 
-<link rel="stylesheet" href="/assets/6bb2e165.18aaa459.css" />
+<link rel="stylesheet" href="/assets/6bb2e165.4eeb8a19.css" />
 <link rel="stylesheet" href="/assets/c983c6bf.a45b011b.css" />
 <link rel="stylesheet" href="/assets/768b5d4d.96df3516.css" /></head>
 
@@ -135,16 +135,16 @@
       <div class="max-w-2xl mx-auto py-8 px-4 astro-TFOVXDCZ">
         <h2 class="text-lg pb-1 uppercase font-base astro-TFOVXDCZ">Other Lessons</h2>
         <article class="astro-TFOVXDCZ">
-          <a href="/til/entries/2017-03-27-case" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
-            <span class="astro-TFOVXDCZ">Various</span>
+          <a href="/til/entries/2017-03-14-du" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
+            <span class="astro-TFOVXDCZ">What is the difference between `du` and `df` command?</span>
           </a>
         </article><article class="astro-TFOVXDCZ">
-          <a href="/til/entries/2017-03-13-java-and-oracle" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
-            <span class="astro-TFOVXDCZ">Java Enum and extract in SQL</span>
+          <a href="/til/entries/2017-03-29-uri" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
+            <span class="astro-TFOVXDCZ">Is URI case sensitive?</span>
           </a>
         </article><article class="astro-TFOVXDCZ">
-          <a href="/til/entries/2017-03-30-bash-shortcuts" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
-            <span class="astro-TFOVXDCZ">BASH Shortcuts I was not not aware of</span>
+          <a href="/til/entries/2019-10-22-fswatch" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
+            <span class="astro-TFOVXDCZ">Execute python file on change fswatch</span>
           </a>
         </article>
       </div>
