--- a/til/entries/2019-05-17-pipe-linux/index.html
+++ b/til/entries/2019-05-17-pipe-linux/index.html
@@ -31,7 +31,7 @@
 
 
 
-<link rel="stylesheet" href="/assets/6bb2e165.18aaa459.css" />
+<link rel="stylesheet" href="/assets/6bb2e165.4eeb8a19.css" />
 <link rel="stylesheet" href="/assets/c983c6bf.a45b011b.css" />
 <link rel="stylesheet" href="/assets/768b5d4d.96df3516.css" /></head>
 
@@ -112,16 +112,16 @@
       <div class="max-w-2xl mx-auto py-8 px-4 astro-TFOVXDCZ">
         <h2 class="text-lg pb-1 uppercase font-base astro-TFOVXDCZ">Other Lessons</h2>
         <article class="astro-TFOVXDCZ">
-          <a href="/til/entries/2023-05-20-eigengrau" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
-            <span class="astro-TFOVXDCZ">The darkest color you can perceive without contrast is called Eigengrau</span>
+          <a href="/til/entries/draft/bla" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
+            <span class="astro-TFOVXDCZ">digrc</span>
           </a>
         </article><article class="astro-TFOVXDCZ">
-          <a href="/til/entries/2019-12-04-pid" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
-            <span class="astro-TFOVXDCZ">Waiting for process</span>
+          <a href="/til/entries/2020-06-28-multiselect" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
+            <span class="astro-TFOVXDCZ">Empty multiselect is not set</span>
           </a>
         </article><article class="astro-TFOVXDCZ">
-          <a href="/til/entries/2019-10-22-fswatch" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
-            <span class="astro-TFOVXDCZ">Execute python file on change fswatch</span>
+          <a href="/til/entries/2018-10-22-bash" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
+            <span class="astro-TFOVXDCZ">.bash_profile vs .bashrc</span>
           </a>
         </article>
       </div>
