--- a/til/entries/2021-05-25-tagged_templates/index.html
+++ b/til/entries/2021-05-25-tagged_templates/index.html
@@ -31,7 +31,7 @@
 
 
 
-<link rel="stylesheet" href="/assets/6bb2e165.18aaa459.css" />
+<link rel="stylesheet" href="/assets/6bb2e165.4eeb8a19.css" />
 <link rel="stylesheet" href="/assets/c983c6bf.a45b011b.css" />
 <link rel="stylesheet" href="/assets/768b5d4d.96df3516.css" /></head>
 
@@ -117,12 +117,12 @@
       <div class="max-w-2xl mx-auto py-8 px-4 astro-TFOVXDCZ">
         <h2 class="text-lg pb-1 uppercase font-base astro-TFOVXDCZ">Other Lessons</h2>
         <article class="astro-TFOVXDCZ">
-          <a href="/til/entries/2019-05-17-pipe-linux" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
-            <span class="astro-TFOVXDCZ">Shortcut for linux pipe</span>
+          <a href="/til/entries/2019-12-06-java-comment-code" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
+            <span class="astro-TFOVXDCZ">Java code comments</span>
           </a>
         </article><article class="astro-TFOVXDCZ">
-          <a href="/til/entries/2023-04-13-how-to-shallow-clone-git" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
-            <span class="astro-TFOVXDCZ">How to Shallow Clone With Git</span>
+          <a href="/til/entries/2017-03-28-sqllite" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
+            <span class="astro-TFOVXDCZ">SQLite Type Affinity</span>
           </a>
         </article><article class="astro-TFOVXDCZ">
           <a href="/til/entries/2017-03-14-du" class="hover:underline-animate font-semibold astro-TFOVXDCZ">
